--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
     "next": "15.3.4",
