--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "embla-carousel-react": "^8.6.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.516.0",
+    "motion": "^12.23.12",
     "next": "15.3.4",
     "react": "19.1.0",
     "react-dnd": "^16.0.1",
